# Copy-trading-bot-SC

./: .env.ex  .gitignore  Anchor.toml  README.md  package.json
programs/copy-trading-bot-SC/: Cargo.toml
programs/copy-trading-bot-SC/src/: consts.rs  errors.rs  lib.rs
programs/copy-trading-bot-SC/src/instructions/admin/: intialize.rs  mod.rs  set_param.rs  update_auth.rs
programs/copy-trading-bot-SC/src/instructions/user/: mod.rs  pumpfun_buy.rs  pumpfun_sell.rs  raydium_amm_swap_base_in.rs  raydium_amm_swap_base_out.rs  raydium_cpmm_swap_base_input.rs
programs/copy-trading-bot-SC/src/states/: global_config.rs  mod.rs
programs/copy-trading-bot-SC/src/utils/: mod.rs
programs/copy-trading-bot-SC/src/validation/: mod.rs
